--- a/index.html
+++ b/index.html
@@ -40,17 +40,21 @@
                 </div>
                 <div class="col-6">
                     <div class="row">
-                        <div class="col-4 text-center">
+                        <div class="col-3 text-center">
                             <input type="text" value="" id="baseFontSize" placeholder="16">
                             <label for="baseFontSize">Base</label>
                         </div>
-                        <div class="col-4 text-center">
+                        <div class="col-3 text-center">
                             <input type="text" value="" id="pxValue" placeholder="16">
                             <label for="pxValue">PX</label>
                         </div>
-                        <div class="col-4 text-center">
+                        <div class="col-3 text-center">
                             <input type="text" value="" id="remValue" placeholder="1">
                             <label for="remValue">REM</label>
+                        </div>
+                        <div class="col-3 text-center">
+                            <input type="text" value="" id="ptValue" placeholder="12">
+                            <label for="em">PT</label>
                         </div>
                     </div> 
                 </div>
